fixing some stuff and cleaning up

--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,7 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* max-height: 10vh; */
   /* align-self: ; */
 }
 .videos {
