changing class name

--- a/src/App.css
+++ b/src/App.css
@@ -185,7 +185,7 @@ ul {
 
   /* align-self: ; */
 }
-.footer {
+.toolbar {
   /* background-color: black; */
   -webkit-order: 0;
   -ms-flex-order: 0;
